# jd

./: CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: cli.rs  lib.rs  main.rs
docs/: INSTALLING.md
jd/: Cargo.toml  README.md
jd/src/: area.rs  category.rs  cli.rs  id.rs  lib.rs  main.rs
jd/tests/: area.rs  category.rs  id.rs  index.rs  system.rs
johnnydecimal/: Cargo.toml  README.md
johnnydecimal/src/: lib.rs
johnnydecimal/tests/: area.rs  category.rs  id.rs  index.rs
server/: Cargo.toml  README.md
server/src/: main.rs
src/: cli.rs  lib.rs  main.rs
src/linter/: mod.rs
src/server/: mod.rs
tests/: release.rs
tests/file/: 00.00 Index.txt
tests/sync/: 00.00 Index.txt
wasm/: Cargo.toml
wasm/src/: lib.rs
