[package]
name = "jd"
description = "A command line interface for interacting with Johnny Decimal systems."
version = "0.1.0"
authors = ["Copyright (C) 2023 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/jd"
edition = "2021"

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }

[build-dependencies]
clap = { version = "4.4.10", features = ["derive"] }
clap_complete = "4.4.4"
clap_mangen = "0.2.15"

[dev-dependencies]
assert_cmd = "2.0.12"
rustympkglib = "0.1.1"
serde = "1.0.193"
toml = "0.8.8"
