[workspace.package]
description = "A command line interface for interacting with Johnny Decimal systems."
version = "0.1.0"
authors = ["Copyright (C) 2023 Donovan Glover <https://donovan.is/>"]
repository = "https://github.com/donovanglover/jd"
license = "AGPL-3.0-or-later"
edition = "2021"
publish = false

[workspace]
resolver = "2"
members = [
  "jd",
  "johnnydecimal",
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
