[package]
name = "jd"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
johnnydecimal = { path = "../johnnydecimal" }
clap = { version = "4.4.8", features = ["derive"] }
trash = "3.2.1"

[lints]
workspace = true
