[package]
name = "jd"
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
johnnydecimal = { path = "../johnnydecimal" }
clap = { version = "4.5.1", features = ["derive"] }
trash = "3.1.2"

[lints]
workspace = true
